# stat418-tools-in-datascience-2026

./: .env.example  .gitignore  LICENSE  README.md  SETUP_MAC.md  SETUP_WINDOWS.md  STUDENT_SETUP.md  pyproject.toml
final-project/: README.md
final-project/AutoRisk/: README.md  build_and_run.sh  docker-compose.yml
final-project/AutoRisk/api/: Dockerfile  main.py  requirements.txt
final-project/AutoRisk/app/: Dockerfile  requirements.txt  streamlit_app.py
final-project/AutoRisk/src/: collect_data.py  eda.py  merge.py  model_baseline.py
final-project/AutoRisk/tests/: test_api.py
final-project/final-slides/: README.md
final-project/proposal-slides/: README.md
week-1/: README.md  STAT418_Week1_EXACT_FIXED_FORMATTING_HELVETICA_LIGHT_16x9.pptx  STAT418_Week1_EXACT_HELVETICA_LIGHT_16x9_NO_BAR_NO_BOLD_TITLES.pptx  slides-week-1.md  ~$STAT418_Week1_EXACT_HELVETICA_LIGHT_16x9_NO_BAR_NO_BOLD_TITLES.pptx
week-1/examples/ai-assistant-demo/: README.md
week-1/examples/git-workflow/: README.md
week-1/examples/python-setup/: README.md  analyze_data.py
week-2/: README.md  slides-week-2.md
week-2/assignment-1/: README.md  hw1-starter.sh
week-2/examples/bash-basics/: README.md
week-2/examples/bash-scripts/: README.md
week-2/examples/data-pipelines/: README.md
week-2/examples/text-processing/: README.md
week-3/: README.md  slides-week-3.md
week-3/examples/git-collaboration/: README.md
week-3/examples/merge-conflicts/: README.md
week-9/: slides_content.json
week-9/examples/fullstack-app/backend/: Dockerfile  pyproject.toml
(+127 files in other folders)
