[project]
name = "week9-fullstack-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0",
  "httpx>=0.26.0",
  "starlette>=0.36.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]